--- a/Imdb/Views/Shared/Site.Master
+++ b/Imdb/Views/Shared/Site.Master
@@ -1,43 +1,41 @@
 ﻿<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage" %>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head runat="server">
+    <meta charset="utf-8">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <!--[if IE]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link href="../../Content/Site.css" rel="stylesheet">
     <script src="/Scripts/jquery-1.4.1.js"></script>
-    <script src="/Scripts/MicrosoftAjax.js" type="text/javascript"></script>
-    <script src="/Scripts/MicrosoftMvcAjax.js" type="text/javascript"></script> 
+    <script src="/Scripts/MicrosoftAjax.js"></script>
+    <script src="/Scripts/MicrosoftMvcAjax.js"></script>
 </head>
 
 <body>
-    <div class="page">
-
-        <div id="header">
-            <div id="title">
-                <h1>My MVC Application</h1>
-            </div>
+    <header>
+        <h1>Imdb Top250 Manager</h1>
               
-            <div id="logindisplay">
-                <% Html.RenderPartial("LogOnUserControl"); %>
-            </div> 
-            
-            <div id="menucontainer">
-            
-                <ul id="menu">
-                    <li><%: Html.ActionLink("Profile", "Index", "User") %></li>
-                    <li><%: Html.ActionLink("Movies", "Index", "Movies") %></li>
-                </ul>
-            
-            </div>
-        </div>
+        <aside id="Login">
+            <% Html.RenderPartial("LogOnUserControl"); %>
+        </aside>
 
-        <div id="main">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+        <nav>
+            <ul>
+                <li><a href="/User/">Profile</a></li>
+                <li><a href="/Movies">Movies</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <div id="footer">
-            </div>
-        </div>
+    <div id="Main">
+        <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
+    
+    <footer>
+        shit been done by me, mafakka
+    </footer>
 </body>
 </html>
